# tomload

./: .gitignore  CMakeLists.txt  LICENSE  README.md  detail_number.cpp  detail_number.h  detail_string.cpp  detail_string.h  integers.hpp  main.cpp  parser.cpp  parser.h  samples.cpp  test_functions.cpp  test_samples.cpp  toml2doctest.py  toml_r.hpp  tomload.cpp  tomload.h  tomload.hpp  view_t.hpp
include/: string_view14.hpp
samples/: Array_1.toml  Keys_3_fix1.toml  Keys_3_fix2.toml
tomload/: detail_number.cpp  detail_number.h  detail_string.cpp  detail_string.h  parser.cpp  parser.h  string_view14.hpp  tomload.cpp  tomload.h  view_t.cpp  view_t.h  view_t.hpp
unittest/: main.cpp  test_accessor.cpp  test_functions.cpp  test_parse_item.cpp  test_samples.cpp
unittest/samples/: Array_2.toml  Float_2_1.toml  Float_2_2.toml  Float_2_3.toml  toml2doctest.py
unittest/test_toml-test/: create_all.sh  tests2doctest.py
unittest/test_toml-test/invalid/: array.cpp  bool.cpp  control.cpp  float.cpp  inline-table.cpp  integer.cpp  key.cpp  string.cpp  table.cpp
unittest/test_toml-test/valid/: array.cpp  bool.cpp  comment.cpp  float.cpp  inline-table.cpp  integer.cpp  key.cpp  root.cpp  string.cpp  table.cpp
unittest/test_toml.io/: create_all.sh  toml2doctest.py
unittest/test_toml.io/invalid/: Float.cpp  InlineTable.cpp  Key_Value_Pair.cpp  Keys.cpp  Table.cpp
unittest/test_toml.io/valid/: Array.cpp  Boolean.cpp  Comment.cpp  Float.cpp  InlineTable.cpp  Integer.cpp  Key_Value_Pair.cpp  Keys.cpp  String.cpp  Table.cpp
unittest/toml-test/: tests2doctest.py
unittest/toml-test/tests/invalid/table/: duplicate-key-09.toml
unittest/toml-test_runs/invalid/: bool.cpp  float.cpp  inline-table.cpp  integer.cpp
unittest/toml-test_runs/valid/: bool.cpp  float.cpp  inline-table.cpp  integer.cpp  string.cpp  table.cpp
unittest/toml.io/: toml2doctest.py
